# maintenance_reminder

./: .env  Cargo.toml  Dockerfile  Rocket.toml  deploy.sh
migrations/2021-03-30-085515_add_logins/: down.sql  up.sql
migrations/2021-05-04-090748_add_cameras/: down.sql  up.sql
references/email/: base.html.tera  issue.registration.html.tera
references/manager/: base.html.tera  index.html.tera  issues.html.tera  settings.html.tera  statistics.html.tera
references/technician/: base.html.tera  cameras.html.tera  cameras.issues.history.html.tera  cameras.issues.react.html.tera  cameras.issues.register.html.tera  cameras.register.html.tera  inventory.single.info.html.tera  issues.html.tera  issues.register.html.tera  issues.solve.html.tera  screens.html.tera  settings.html.tera  statistics.info.html.tera  tasks.html.tera  tasks.info.html.tera
src/: login.rs  main.rs  schema.rs  user_schema.rs
src/views/: camera.rs  email.rs  login.rs  manager.rs  mod.rs  screen.rs  super_manager.rs  technician.rs
templates/: base.html.tera  camera_edit.html.tera  cameras.html.tera  email.settings.html.tera  index.html.tera  login.html.tera  message.html.tera  navigation.html.tera  screens.html.tera  settings.filter.html.tera
templates/email/: index.html.tera
templates/manager/: base.html.tera  base.menu.html.tera  issues.html.tera  issues.register.html.tera  settings.html.tera  statistics.html.tera
templates/technician/: base.html.tera  cameras.edit.html.tera  cameras.html.tera  cameras.issues.history.html.tera  cameras.issues.react.html.tera  cameras.issues.register.html.tera  cameras.issues.solve.html.tera  cameras.register.html.tera  index.html.tera  inventory.html.tera  inventory.info.html.tera  inventory.register.html.tera  issues.history.html.tera  issues.html.tera  (+10 more)
(+3 files in other folders)
