[package]
name = "maintenance_reminder"
version = "0.1.0"
authors = ["Ignas Lapėnas <ignas@lapenas.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = ""
log = ""
rocket = ""
serde = {version = "", features = ["derive"]}
simplelog = ""

[dependencies.rocket_contrib]
version = ""
default-features = false
features = ["serve", "tera_templates"]
