[package]
name = "maintenance_reminder"
version = "0.1.0"
authors = ["Ignas Lapėnas <ignas@lapenas.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = ""
log = ""
rocket = { version = "0.4.7", features = ["tls"] }
serde = {version = "", features = ["derive"]}
simplelog = ""

[dependencies.rocket_contrib]
version = ""
default-features = false
features = ["diesel_postgres_pool", "serve", "tera_templates"]
