[package]
name = "maintenance_reminder"
version = "0.1.0"
authors = ["Ignas Lapėnas <ignas@lapenas.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aurora_api_common = {version = "", git = "https://bitbucket.org/HitWRight/rest_api_aurora/src/master/common/"}
base64 = ""
chrono = ""
diesel = ""
log = ""
pretty_env_logger = ""
reqwest = { version = "", features = ["blocking"] }
rocket = { version = "0.4.7", features = ["tls"] }
serde = {version = "", features = ["derive"]}
serde_json = ""

[dependencies.rocket_contrib]
version = ""
default-features = false
features = ["diesel_postgres_pool", "serve", "tera_templates"]
